--- a/presentation.ipynb
+++ b/presentation.ipynb
@@ -7,7 +7,7 @@
     "![](images/GH.jpg)\n",
     "\n",
     "\n",
-    "# <center> Life Expectance and Healthcare </center>"
+    "# <center><ins> Life Expectancy and Healthcare </ins></center>"
    ]
   },
   {
@@ -16,7 +16,7 @@
    "source": [
     "## Overview\n",
     "\n",
-    "**Gloabl Health** is always a public topic at the center. Many aspects are related to **Global Health**. Among them, **Life Expectancy** is a very important measure. WHO has published the complete **2020 World Health Statistics**. My project will focus on the **Life Expectancy** and some selected attributes within the **Healthcare category**, such as **Healthcare Coverage**, **Healthcare Workforce**. I will try to find out possible links between **Life Expectancy** and **Healthcare**."
+    "**Global Health** is always a public topic at the center. Many aspects are related to **Global Health**. Among them, **Life Expectancy** is a very important measure. WHO has published the complete **2020 World Health Statistics**. My project will focus on the **Life Expectancy** and some selected attributes within the **Healthcare category**, such as **Healthcare Coverage**, **Healthcare Workforce**. I will try to find out possible links between **Life Expectancy** and **Healthcare**."
    ]
   },
   {
@@ -35,7 +35,7 @@
     "\n",
     "### About the Data:\n",
     "\n",
-    "This dataset covers the most recent and updated health statistics of the world by WHO. It is a set of 39 files, each corresponding to a specific aspect of the health statistics. For my analysis purpose, I choose from them 8 datasets relating to **Life Expectancy** and **Healthcare**:\n",
+    "This dataset covers the most recent and updated global health statistics by WHO. It is a set of 39 files, each corresponding to a specific aspect of the health statistics. For my analysis purpose, I choose from them 8 datasets relating to **Life Expectancy** and **Healthcare**:\n",
     "\n",
     "* Life expectancy at birth, country wise by years\n",
     "* Universal healthcare coverage\n",
@@ -46,7 +46,7 @@
     "* Dentists per 10,000 population\n",
     "* Pharmacists per 10,000 population\n",
     "\n",
-    "A brief exploration showed that the yearly statistics are not available for many of the years. All these datasets have only 2015 in common. 2015 is not far from now, so all data for this year are selected for further analysis.\n",
+    "A brief exploration showed that the yearly statistics are not available for many of the years. All these datasets have only **2015** in common. **2015** is not far from now, so all data for this year are selected for further analysis.\n",
     "\n"
    ]
   },
@@ -59,7 +59,7 @@
     "![](images/le.png)\n",
     "\n",
     "\n",
-    "This picture shows the top and bottome 20 Countries on Life Expectancy. Unfortunately USA is not among the top 20."
+    "This picture shows the top and bottom 20 Countries on Life Expectancy. Unfortunately USA is not among the top 20."
    ]
   },
   {
@@ -119,9 +119,9 @@
     "\n",
     "The above correlation matrix is calculated using the Pandas default Pearson's method which assumes the variables are normally distributed. To validate this calculation, it is necessary to test if the various features in the dataframe are normally distributed.\n",
     "\n",
-    "* H0: the sample is normally distributed.\n",
-    "* H1: the sample is not normally distributed.\n",
-    "* Threshold $\\alpha$: 0.05"
+    "* **H0: the sample is normally distributed.**\n",
+    "* **H1: the sample is not normally distributed.**\n",
+    "* **Threshold $\\alpha$: 0.05**"
    ]
   },
   {
@@ -183,7 +183,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Here is the summary table showing the correlation between features:**\n",
+    "**Here is the summary table showing the correlation between features: I listed only those related to Life Expectancy**\n",
     "\n",
     "Feature Pair | Correlation Coefficient | p-Value\n",
     "------------ | ------------- | -------------\n",
@@ -195,7 +195,7 @@
     "LifeExpectancy / HHExpdt10 | 0.302 | 0.161\n",
     "LifeExpectancy / HHExpdt25 | 0.085 | 0.701\n",
     "\n",
-    "You can see the Life Expectancy is most correlated to the Universal Healthcare Coverage, which is not surprings. It also strongly correlated to Healthcare Workforce, like doctor, nurse and phamarcisit numbers. It's interesting to see that it is correlated to dentist numbers to a lesser content. On the contrary, it is not correlated to percentage of household income spent on the healthcare, which I think is explainable. The percentage of household income is just a percentage, it's not reflecting the total amount of money spent on healthcare. Should we have the data of total cost, we might be able to find some correlation.\n"
+    "You can see the Life Expectancy is most correlated to the Universal Healthcare Coverage, which is not surpring. It also strongly correlated to Healthcare Workforce, like doctor, nurse and phamarcisit numbers. It's interesting to see that it is correlated to dentist numbers to a lesser degree. On the contrary, it is not correlated to percentage of household income spent on the healthcare, which I think is explainable. The percentage of household income is just a percentage, it's not reflecting the total amount of money spent on healthcare. Should we have the data of total cost, we might be able to find some correlation.\n"
    ]
   },
   {
