--- a/presentation.ipynb
+++ b/presentation.ipynb
@@ -16,7 +16,7 @@
    "source": [
     "## Overview\n",
     "\n",
-    "**Global Health** is always a public topic at the center. Many aspects are related to **Global Health**. Among them, **Life Expectancy** is a very important measure. WHO has published the complete **2020 World Health Statistics**. My project will focus on the **Life Expectancy** and some selected attributes within the **Healthcare category**, such as **Healthcare Coverage**, **Healthcare Workforce**. The objective of this project is to find out possible links between **Life Expectancy** and **Healthcare**."
+    "**Global Health** is always a public topic at the center. Many attributes are related to **Global Health**. Among them, **Life Expectancy** is a very important one. WHO has published the complete **2020 World Health Statistics**. My project will focus on the **Life Expectancy** and some selected attributes within the **Healthcare category**, such as **Healthcare Coverage**, **Healthcare Workforce**. The objective of this project is to find out possible links between **Life Expectancy** and **Healthcare**."
    ]
   },
   {
@@ -248,7 +248,7 @@
    "source": [
     "## Future plan\n",
     "\n",
-    "**From the Spearman Correlation Testing, we can see Life Expectancy is mostly correlated to Universal Healthcare Coverage, and to Healthcare Workforce at a lesser degree. A question is: Is it really that the correlation between Life Expectancy and Universal Healthcare Coverage stronger than the others? I may try out the AB testing.**"
+    "**From the Spearman Correlation Testing, we can see Life Expectancy is mostly correlated to Universal Healthcare Coverage, and to Healthcare Workforce at a lesser degree. A question is: Is it really that the correlation between Life Expectancy and Universal Healthcare Coverage is stronger than the others? I may try out some other testing.**"
    ]
   },
   {
