--- a/presentation.ipynb
+++ b/presentation.ipynb
@@ -162,6 +162,7 @@
     "\n",
     "### <B><center>$\\tanh(\\operatorname{arctanh}r\\pm1.96/\\sqrt{n-3})$</center></B>\n",
     "\n",
+    "![](images/formula.jpg)\n",
     "\n",
     "Reference: \n",
     "[https://stats.stackexchange.com/questions/18887/how-to-calculate-a-confidence-interval-for-spearmans-rank-correlation](https://stats.stackexchange.com/questions/18887/how-to-calculate-a-confidence-interval-for-spearmans-rank-correlation)\n",
